--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/iufer/multiuser-sketch#readme",
   "dependencies": {
+    "canvas": "^2.9.3",
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
   }
